Bug 268838 - rekonq sometimes crashes [maybe flashplayer]
Summary: rekonq sometimes crashes [maybe flashplayer]
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: 0.7
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-18 18:59 UTC by Johannes Obermayr
Modified: 2011-03-19 09:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Obermayr 2011-03-18 18:59:57 UTC
Application: rekonq (0.6.88)
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.1-1.2-desktop i686
Distribution (Platform): openSUSE RPMs

-- Information about the crash:
If flashplayer is installled rekonq sometimes crashes.

lightspark or gnash also crash (QtWebKit bug).

Maybe it is also a QtWebKit bug ...

The crash can be reproduced some of the time.

-- Backtrace:
Application: rekonq (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb593b710 (LWP 26103))]

Thread 12 (Thread 0xaff1ab70 (LWP 26104)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xb460cc87 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib/libQtWebKit.so.4
#3  0xb6dafb05 in start_thread (arg=0xaff1ab70) at pthread_create.c:297
#4  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 11 (Thread 0xaf4aab70 (LWP 26105)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xb3700e17 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0xb38171a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#3  0xb3700e5f in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0xb38171a0) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#4  0xb6dafb05 in start_thread (arg=0xaf4aab70) at pthread_create.c:297
#5  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 10 (Thread 0xae951b70 (LWP 26106)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xb6e2aab0 in wait (this=0x81c85b0, mutex=0x81cac30, time=4294967295) at thread/qwaitcondition_unix.cpp:88
#3  QWaitCondition::wait (this=0x81c85b0, mutex=0x81cac30, time=4294967295) at thread/qwaitcondition_unix.cpp:160
#4  0xb31d3056 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x81c8598, th=0x835a1c0) at /usr/src/debug/kdelibs-4.6.0/threadweaver/Weaver/WeaverImpl.cpp:365
#5  0xb31d67a7 in waitForAvailableJob (this=0x81cbf50, th=0x835a1c0) at /usr/src/debug/kdelibs-4.6.0/threadweaver/Weaver/WeaverImpl.cpp:356
#6  ThreadWeaver::WorkingHardState::applyForWork (this=0x81cbf50, th=0x835a1c0) at /usr/src/debug/kdelibs-4.6.0/threadweaver/Weaver/WorkingHardState.cpp:71
#7  0xb31d2a03 in ThreadWeaver::WeaverImpl::applyForWork (this=0x81c8598, th=0x835a1c0, previous=0x8316e90) at /usr/src/debug/kdelibs-4.6.0/threadweaver/Weaver/WeaverImpl.cpp:351
#8  0xb31d3564 in ThreadWeaver::ThreadRunHelper::run (this=0xae951314, parent=0x81c8598, th=0x835a1c0) at /usr/src/debug/kdelibs-4.6.0/threadweaver/Weaver/Thread.cpp:87
#9  0xb31d361a in ThreadWeaver::Thread::run (this=0x835a1c0) at /usr/src/debug/kdelibs-4.6.0/threadweaver/Weaver/Thread.cpp:142
#10 0xb6e2a3aa in QThreadPrivate::start (arg=0x835a1c0) at thread/qthread_unix.cpp:285
#11 0xb6dafb05 in start_thread (arg=0xae951b70) at pthread_create.c:297
#12 0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 9 (Thread 0xa59aeb70 (LWP 26187)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4432 in pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S:179
#2  0xb6e2aa3c in wait (this=0x8401ff4, mutex=0x8401ff0, time=30000) at thread/qwaitcondition_unix.cpp:86
#3  QWaitCondition::wait (this=0x8401ff4, mutex=0x8401ff0, time=30000) at thread/qwaitcondition_unix.cpp:160
#4  0xb6e1fdf4 in QThreadPoolThread::run (this=0x8496a60) at concurrent/qthreadpool.cpp:140
#5  0xb6e2a3aa in QThreadPrivate::start (arg=0x8496a60) at thread/qthread_unix.cpp:285
#6  0xb6dafb05 in start_thread (arg=0xa59aeb70) at pthread_create.c:297
#7  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 8 (Thread 0xa2fe3b70 (LWP 26196)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xa3d9ffa7 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#3  0xa3eb3b75 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#4  0xa3da00ad in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#5  0xa3da0736 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#6  0xb6dafb05 in start_thread (arg=0xa2fe3b70) at pthread_create.c:297
#7  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 7 (Thread 0xa27e2b70 (LWP 26197)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xa3d9ffa7 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#3  0xa3eb3b75 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#4  0xa3da00ad in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#5  0xa3da0736 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#6  0xb6dafb05 in start_thread (arg=0xa27e2b70) at pthread_create.c:297
#7  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 6 (Thread 0xa1decb70 (LWP 26202)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4432 in pthread_cond_timedwait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_timedwait.S:179
#2  0xa3d9ff79 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#3  0xa3dc82d3 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#4  0xa3da00ad in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#5  0xa3da0736 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#6  0xb6dafb05 in start_thread (arg=0xa1decb70) at pthread_create.c:297
#7  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 5 (Thread 0xa13ebb70 (LWP 26204)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xa3d9ffa7 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#3  0xa420bb46 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#4  0xa3da00ad in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#5  0xa3da0736 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#6  0xb6dafb05 in start_thread (arg=0xa13ebb70) at pthread_create.c:297
#7  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 4 (Thread 0xa06ffb70 (LWP 26205)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6134276 in nanosleep () at ../sysdeps/unix/syscall-template.S:82
#2  0xb616558d in usleep (useconds=1) at ../sysdeps/unix/sysv/linux/usleep.c:33
#3  0xa4169cac in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#4  0xb6dafb05 in start_thread (arg=0xa06ffb70) at pthread_create.c:297
#5  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 3 (Thread 0x9fcd2b70 (LWP 26206)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xa45af639 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#3  0xa4528ebd in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#4  0xa4519482 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#5  0xb6dafb05 in start_thread (arg=0x9fcd2b70) at pthread_create.c:297
#6  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0x9f4d1b70 (LWP 26207)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb6db4105 in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S:122
#2  0xa45af639 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#3  0xa4528ebd in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#4  0xa4519482 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#5  0xb6dafb05 in start_thread (arg=0x9f4d1b70) at pthread_create.c:297
#6  0xb616bd5e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb593b710 (LWP 26103)):
[KCrash Handler]
#7  MainWindow::currentTab (this=0x0) at /usr/src/debug/rekonq-0.6.88.git.1300030409/src/mainwindow.cpp:962
#8  0xb2568d0e in BookmarkProvider::slotBookmarksChanged (this=0x828bb08) at /usr/src/debug/rekonq-0.6.88.git.1300030409/src/bookmarks/bookmarkprovider.cpp:204
#9  0xb256908c in BookmarkProvider::qt_metacall (this=0x828bb08, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfb776f4) at /usr/src/debug/rekonq-0.6.88.git.1300030409/build/src/bookmarkprovider.moc:81
#10 0xb6f2d8cd in QMetaObject::metacall (object=0x828bb08, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0xbfb776f4) at kernel/qmetaobject.cpp:237
#11 0xb6f3da2c in QMetaObject::activate (sender=0x82856b0, m=0xb57d36bc, local_signal_index=3, argv=0xbfb776f4) at kernel/qobject.cpp:3272
#12 0xb561be6d in KBookmarkManager::changed (this=0x82856b0, _t1=..., _t2=...) at /usr/src/debug/kdelibs-4.6.0/build/kio/kbookmarkmanager.moc:139
#13 0xb561d262 in KBookmarkManager::notifyChanged (this=0x82856b0, groupAddress=..., msg=...) at /usr/src/debug/kdelibs-4.6.0/kio/bookmarks/kbookmarkmanager.cc:600
#14 0xb5646362 in KBookmarkManager::qt_metacall (this=0x82856b0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfb7789c) at /usr/src/debug/kdelibs-4.6.0/build/kio/kbookmarkmanager.moc:105
#15 0xb5d4d5e0 in QDBusConnectionPrivate::deliverCall (this=0x80cc9e8, object=0x82856b0, msg=..., metaTypes=..., slotIdx=0) at qdbusintegrator.cpp:919
#16 0xb5d59656 in QDBusCallDeliveryEvent::placeMetaCall (this=0x8293138, object=0x82856b0) at qdbusintegrator_p.h:103
#17 0xb6f3c5af in QObject::event (this=0x82856b0, e=0x8293138) at kernel/qobject.cpp:1211
#18 0xb6433414 in QApplicationPrivate::notify_helper (this=0x80d31e0, receiver=0x82856b0, e=0x8293138) at kernel/qapplication.cpp:4445
#19 0xb643c0c7 in QApplication::notify (this=0xbfb7b480, receiver=0x82856b0, e=0x8293138) at kernel/qapplication.cpp:3845
#20 0xb75811f1 in KApplication::notify (this=0xbfb7b480, receiver=0x82856b0, event=0x8293138) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#21 0xb6f26fde in QCoreApplication::notifyInternal (this=0xbfb7b480, receiver=0x82856b0, event=0x8293138) at kernel/qcoreapplication.cpp:732
#22 0xb6f2ad6c in sendEvent (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.h:215
#23 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x80582a0) at kernel/qcoreapplication.cpp:1373
#24 0xb6f2aebc in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#25 0xb6f555e4 in sendPostedEvents (s=0x80d5368) at kernel/qcoreapplication.h:220
#26 postEventSourceDispatch (s=0x80d5368) at kernel/qeventdispatcher_glib.cpp:277
#27 0xb5ba4509 in g_main_dispatch (context=0x80d52d8) at gmain.c:2440
#28 g_main_context_dispatch (context=0x80d52d8) at gmain.c:3013
#29 0xb5ba4d10 in g_main_context_iterate (context=0x80d52d8, block=1, dispatch=1, self=0x805cd88) at gmain.c:3091
#30 0xb5ba53ef in g_main_loop_run (loop=0x94cd1a8) at gmain.c:3299
#31 0xa415603b in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#32 0xa4157cdb in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#33 0xa4157e6f in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#34 0xa40a07e5 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#35 0xa3d93a06 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#36 0xa3d94b3c in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#37 0xa3d8941a in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#38 0xa3d8f814 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#39 0xb436add9 in WebCore::PluginView::dispatchNPEvent(_XEvent&) () from /usr/lib/libQtWebKit.so.4
#40 0xb436b73a in WebCore::PluginView::handleMouseEvent(WebCore::MouseEvent*) () from /usr/lib/libQtWebKit.so.4
#41 0xb41fa153 in WebCore::PluginView::handleEvent(WebCore::Event*) () from /usr/lib/libQtWebKit.so.4
#42 0xb4067015 in WebCore::HTMLPlugInElement::defaultEventHandler(WebCore::Event*) () from /usr/lib/libQtWebKit.so.4
#43 0xb3f416ef in WebCore::Node::dispatchGenericEvent(WTF::PassRefPtr<WebCore::Event>) () from /usr/lib/libQtWebKit.so.4
#44 0xb3f41c0e in WebCore::Node::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) () from /usr/lib/libQtWebKit.so.4
#45 0xb3f3f330 in WebCore::Node::dispatchMouseEvent(WebCore::AtomicString const&, int, int, int, int, int, int, bool, bool, bool, bool, bool, WebCore::Node*, WTF::PassRefPtr<WebCore::Event>) () from /usr/lib/libQtWebKit.so.4
#46 0xb3f3fe1d in WebCore::Node::dispatchMouseEvent(WebCore::PlatformMouseEvent const&, WebCore::AtomicString const&, int, WebCore::Node*) () from /usr/lib/libQtWebKit.so.4
#47 0xb4157804 in WebCore::EventHandler::dispatchMouseEvent(WebCore::AtomicString const&, WebCore::Node*, bool, int, WebCore::PlatformMouseEvent const&, bool) () from /usr/lib/libQtWebKit.so.4
#48 0xb4158c93 in WebCore::EventHandler::handleMousePressEvent(WebCore::PlatformMouseEvent const&) () from /usr/lib/libQtWebKit.so.4
#49 0xb434a205 in QWebPagePrivate::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtWebKit.so.4
#50 0xb435171f in QWebPage::event(QEvent*) () from /usr/lib/libQtWebKit.so.4
#51 0xb4353dc0 in QWebView::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtWebKit.so.4
#52 0xb31b5819 in KWebView::mousePressEvent (this=0x820b598, event=0xbfb79124) at /usr/src/debug/kdelibs-4.6.0/kdewebkit/kwebview.cpp:70
#53 0xb25490b7 in WebView::mousePressEvent (this=0x820b598, event=0xbfb79124) at /usr/src/debug/rekonq-0.6.88.git.1300030409/src/webview.cpp:446
#54 0xb648e574 in QWidget::event (this=0x820b598, event=0xbfb79124) at kernel/qwidget.cpp:8196
#55 0xb435451f in QWebView::event(QEvent*) () from /usr/lib/libQtWebKit.so.4
#56 0xb6433414 in QApplicationPrivate::notify_helper (this=0x80d31e0, receiver=0x820b598, e=0xbfb79124) at kernel/qapplication.cpp:4445
#57 0xb643cc20 in QApplication::notify (this=0xbfb78e3c, receiver=0x820b598, e=0xbfb79124) at kernel/qapplication.cpp:4006
#58 0xb75811f1 in KApplication::notify (this=0xbfb7b480, receiver=0x820b598, event=0xbfb79124) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#59 0xb6f26fde in QCoreApplication::notifyInternal (this=0xbfb7b480, receiver=0x820b598, event=0xbfb79124) at kernel/qcoreapplication.cpp:732
#60 0xb643445c in sendSpontaneousEvent (receiver=0x820b598, event=0xbfb79124, alienWidget=0x820b598, nativeWidget=0x81dde08, buttonDown=0xb6da5c00, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:218
#61 QApplicationPrivate::sendMouseEvent (receiver=0x820b598, event=0xbfb79124, alienWidget=0x820b598, nativeWidget=0x81dde08, buttonDown=0xb6da5c00, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3103
#62 0xb64c0030 in QETWidget::translateMouseEvent (this=0x81dde08, event=0xbfb7963c) at kernel/qapplication_x11.cpp:4438
#63 0xb64bf13e in QApplication::x11ProcessEvent (this=0xbfb7b480, event=0xbfb7963c) at kernel/qapplication_x11.cpp:3442
#64 0xb64e9960 in x11EventSourceDispatch (s=0x80d61e8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#65 0xb5ba4509 in g_main_dispatch (context=0x80d52d8) at gmain.c:2440
#66 g_main_context_dispatch (context=0x80d52d8) at gmain.c:3013
#67 0xb5ba4d10 in g_main_context_iterate (context=0x80d52d8, block=1, dispatch=1, self=0x805cd88) at gmain.c:3091
#68 0xb5ba53ef in g_main_loop_run (loop=0x9f24a58) at gmain.c:3299
#69 0xa415603b in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#70 0xa4157cdb in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#71 0xa4157e6f in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#72 0xa40a07e5 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#73 0xa3d93a06 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#74 0xa3d94b3c in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#75 0xa3d8941a in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#76 0xa3d8f814 in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#77 0xb436add9 in WebCore::PluginView::dispatchNPEvent(_XEvent&) () from /usr/lib/libQtWebKit.so.4
#78 0xb436b73a in WebCore::PluginView::handleMouseEvent(WebCore::MouseEvent*) () from /usr/lib/libQtWebKit.so.4
#79 0xb41fa153 in WebCore::PluginView::handleEvent(WebCore::Event*) () from /usr/lib/libQtWebKit.so.4
#80 0xb4067015 in WebCore::HTMLPlugInElement::defaultEventHandler(WebCore::Event*) () from /usr/lib/libQtWebKit.so.4
#81 0xb3f416ef in WebCore::Node::dispatchGenericEvent(WTF::PassRefPtr<WebCore::Event>) () from /usr/lib/libQtWebKit.so.4
#82 0xb3f41c0e in WebCore::Node::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) () from /usr/lib/libQtWebKit.so.4
#83 0xb3f3f330 in WebCore::Node::dispatchMouseEvent(WebCore::AtomicString const&, int, int, int, int, int, int, bool, bool, bool, bool, bool, WebCore::Node*, WTF::PassRefPtr<WebCore::Event>) () from /usr/lib/libQtWebKit.so.4
#84 0xb3f3fe1d in WebCore::Node::dispatchMouseEvent(WebCore::PlatformMouseEvent const&, WebCore::AtomicString const&, int, WebCore::Node*) () from /usr/lib/libQtWebKit.so.4
#85 0xb4157804 in WebCore::EventHandler::dispatchMouseEvent(WebCore::AtomicString const&, WebCore::Node*, bool, int, WebCore::PlatformMouseEvent const&, bool) () from /usr/lib/libQtWebKit.so.4
#86 0xb4158c93 in WebCore::EventHandler::handleMousePressEvent(WebCore::PlatformMouseEvent const&) () from /usr/lib/libQtWebKit.so.4
#87 0xb434a205 in QWebPagePrivate::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtWebKit.so.4
#88 0xb435171f in QWebPage::event(QEvent*) () from /usr/lib/libQtWebKit.so.4
#89 0xb4353dc0 in QWebView::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtWebKit.so.4
#90 0xb31b5819 in KWebView::mousePressEvent (this=0x820b598, event=0xbfb7a9b4) at /usr/src/debug/kdelibs-4.6.0/kdewebkit/kwebview.cpp:70
#91 0xb25490b7 in WebView::mousePressEvent (this=0x820b598, event=0xbfb7a9b4) at /usr/src/debug/rekonq-0.6.88.git.1300030409/src/webview.cpp:446
#92 0xb648e574 in QWidget::event (this=0x820b598, event=0xbfb7a9b4) at kernel/qwidget.cpp:8196
#93 0xb435451f in QWebView::event(QEvent*) () from /usr/lib/libQtWebKit.so.4
#94 0xb6433414 in QApplicationPrivate::notify_helper (this=0x80d31e0, receiver=0x820b598, e=0xbfb7a9b4) at kernel/qapplication.cpp:4445
#95 0xb643cc20 in QApplication::notify (this=0xbfb7a6cc, receiver=0x820b598, e=0xbfb7a9b4) at kernel/qapplication.cpp:4006
#96 0xb75811f1 in KApplication::notify (this=0xbfb7b480, receiver=0x820b598, event=0xbfb7a9b4) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#97 0xb6f26fde in QCoreApplication::notifyInternal (this=0xbfb7b480, receiver=0x820b598, event=0xbfb7a9b4) at kernel/qcoreapplication.cpp:732
#98 0xb643445c in sendSpontaneousEvent (receiver=0x820b598, event=0xbfb7a9b4, alienWidget=0x820b598, nativeWidget=0x81dde08, buttonDown=0xb6da5c00, lastMouseReceiver=..., spontaneous=true) at ../../src/corelib/kernel/qcoreapplication.h:218
#99 QApplicationPrivate::sendMouseEvent (receiver=0x820b598, event=0xbfb7a9b4, alienWidget=0x820b598, nativeWidget=0x81dde08, buttonDown=0xb6da5c00, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3103
#100 0xb64c0030 in QETWidget::translateMouseEvent (this=0x81dde08, event=0xbfb7aecc) at kernel/qapplication_x11.cpp:4438
#101 0xb64bf13e in QApplication::x11ProcessEvent (this=0xbfb7b480, event=0xbfb7aecc) at kernel/qapplication_x11.cpp:3442
#102 0xb64e9960 in x11EventSourceDispatch (s=0x80d61e8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#103 0xb5ba4509 in g_main_dispatch (context=0x80d52d8) at gmain.c:2440
#104 g_main_context_dispatch (context=0x80d52d8) at gmain.c:3013
#105 0xb5ba4d10 in g_main_context_iterate (context=0x80d52d8, block=1, dispatch=1, self=0x805cd88) at gmain.c:3091
#106 0xb5ba4fce in g_main_context_iteration (context=0x80d52d8, may_block=1) at gmain.c:3154
#107 0xa3a10254 in gtk_main_iteration () from /usr/lib/libgtk-x11-2.0.so.0
#108 0xa3d9631c in ?? () from /usr/lib/browser-plugins/libflashplayer.so
#109 0xb5ba5e5f in g_timeout_dispatch (source=0x8912558, callback=0xa3d96130, user_data=0xa33a8000) at gmain.c:3877
#110 0xb5ba4509 in g_main_dispatch (context=0x80d52d8) at gmain.c:2440
#111 g_main_context_dispatch (context=0x80d52d8) at gmain.c:3013
#112 0xb5ba4d10 in g_main_context_iterate (context=0x80d52d8, block=1, dispatch=1, self=0x805cd88) at gmain.c:3091
#113 0xb5ba4fce in g_main_context_iteration (context=0x80d52d8, may_block=1) at gmain.c:3154
#114 0xb6f5576b in QEventDispatcherGlib::processEvents (this=0x80d2ad0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#115 0xb64e955a in QGuiEventDispatcherGlib::processEvents (this=0x80d2ad0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#116 0xb6f262bd in QEventLoop::processEvents (this=0xbfb7b3d4, flags=...) at kernel/qeventloop.cpp:149
#117 0xb6f264e9 in QEventLoop::exec (this=0xbfb7b3d4, flags=...) at kernel/qeventloop.cpp:201
#118 0xb6f2af90 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#119 0xb6431104 in QApplication::exec () at kernel/qapplication.cpp:3719
#120 0xb25a5a5f in kdemain (argc=1, argv=0x805cdf8) at /usr/src/debug/rekonq-0.6.88.git.1300030409/src/main.cpp:215
#121 0x0804e531 in _start ()

Reported using DrKonqi
Comment 1 Andrea Diamantini 2011-03-19 08:44:52 UTC
With my first eye, it seems a rekonq problem. Targetting 0.7, thanks for the report...
Comment 2 Andrea Diamantini 2011-03-19 09:42:34 UTC
Git commit a309167dc747072830ad47b979c926e9083e6f63 by Andrea Diamantini.
Committed on 19/03/2011 at 09:44.
Pushed by adjam into branch 'master'.

Check if mainWindow  and currentab really exist before using in bookmarksprovider.
In fact now this is NOT automagically ensured there (as in any non widget rekonq class)

BUG:268838

M  +2    -2    src/bookmarks/bookmarkprovider.cpp     

http://commits.kde.org/rekonq/a309167dc747072830ad47b979c926e9083e6f63