Check if mainWindow  and currentab really exist before using in bookmarksprovider. In fact now this is NOT automagically ensured there (as in any non widget rekonq class)

BUG:268838